Make esbuild to produce bundled and minified VSIX
This fix makes 'esbuild' to produce the bundled and minified VSIX extension archive,
free of unneeded dependency modules, when the packaging is started with `vsce package`.

On other hand, when building with `npm install && npm run build` and testing with `npm test`
the extension file structure is kept unchange and the trunspiled scripts aren't minified,
so the unit testing and coverage tests work as usual.

Note: `npm install` is needed to be executed after executing `vsce package` as the last one
clears the `node_modules/` of the depencencies not needed in production.

Fixes #4226

Signed-off-by: Victor Rubezhny <vrubezhny@redhat.com>

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,36 +1,42 @@
-.vscode/**
-.vscode-test/**
+azure-pipelines.yml
+build/**
+build/**
+CONTRIBUTING.md
+coverage/**
+coverconfig.json
+doc/**
+.eslintignore
+.gitattributes
+.github
+.gitignore
+header.js
+images/demo-featured-image.png
 images/gif/**
-out/test/**
+Jenkinsfile
+.mocharc.js
+out/build**
 out/build/**
-out/test-resources/**
-out/tools-cache/**
+out/coverage/**
 out/**/*.map
 out/src-orig/**
+out/test/**
+out/test-resources/**
+out/tools-cache/**
+out/webview/**
+*.sha256
 src/**
 !src/tools.json
-doc/**
-.gitignore
-.github
-tsconfig.json
-vsc-extension-quickstart.md
-tslint.json
-*.vsix
 test/**
-out/coverage/**
-coverconfig.json
-Jenkinsfile
-.gitattributes
-.travis.yml
-CONTRIBUTING.md
-build/**
-out/build**
-azure-pipelines.yml
-images/demo-featured-image.png
+test/**
 test-resources/**
-header.js
-.mocharc.js
-.eslintignore
+test-resources/**
 *.tgz
-*.sha256
-**.tsbuildinfo
+.travis.yml
+*/**.tsbuildinfo
+tsconfig.json
+tsconfig.tsbuildinfo
+tslint.json
+vsc-extension-quickstart.md
+.vscode/**
+.vscode-test/**
+*.vsix
