--- a/package.json
+++ b/package.json
@@ -47,69 +47,45 @@
 	"icon": "images/openshift_extension.png",
 	"main": "./out/src/extension",
 	"scripts": {
-		"verify": "node ./out/build/verify-tools.js",
-		"vscode:prepublish": "npm run build",
-		"compile": "run-p compile:*",
-		"compile:ext": "tsc -b ./",
-		"compile:checkWebviews": "tsc -p ./src/webview -noEmit",
-		"compile:webviews": "node ./build/esbuild.mjs",
+		"verify": "ts-node ./build/verify-tools.ts",
+		"vscode:prepublish": "npm install && npm run clean && npm run lint && npm run compile-production && npm run bundle-tools && npm prune --omit=dev",
+		"compile": "npm run compile:check && npm run compile:build",
+		"compile-production": "npm run compile:check-production && npm run compile:build-production",
+		"compile:check": "tsc -b . && tsc -p ./src/webview -noEmit",
+		"compile:check-production": "tsc -b . -noEmit && tsc -p ./src/webview -noEmit",
+		"compile:build": "node ./build/esbuild.mjs",
+		"compile:build-production": "node ./build/esbuild.mjs --production",
 		"watch": "node ./build/esbuild-watch.mjs",
-		"clean": "shx rm -rf out/build out/src out/test out/tools out/test-resources out/*Viewer out/**.tsbuildinfo",
+		"clean": "shx rm -rf out/build out/src out/webview out/test out/tools out/test-resources out/**.tsbuildinfo",
 		"lint": "eslint . --ext .ts --ext .tsx --quiet",
 		"lint-fix": "eslint . --ext .ts --ext .tsx --fix",
 		"lint-nic": "eslint . --ext .ts --ext .tsx --no-inline-config",
 		"check-cycles": "dpdm --no-tree --no-warning --exit-code circular:1 ./src/extension.ts",
-		"bundle-tools": "node ./out/build/bundle-tools.js --platform",
+		"bundle-tools": "ts-node ./build/bundle-tools.ts --platform",
 		"todo": "leasot **/*.ts --ignore node_modules -x",
-		"test": "npm run vscode:prepublish && node ./out/build/install-vscode.js && node ./out/build/run-tests.js unit",
-		"test-integration": "npm run vscode:prepublish && node ./out/build/run-tests.js integration",
-		"test-integration:coverage": "npm run vscode:prepublish && npm run test:instrument && node ./out/build/run-tests.js integration",
+		"test:prepare": "npm install && npm run build",
+		"test": "npm run test:prepare && node ./out/build/install-vscode.js && node ./out/build/run-tests.js unit",
+		"test-integration": "npm run test:prepare && node ./out/build/run-tests.js integration",
+		"test-integration:coverage": "npm run test:prepare && npm run test:instrument && node ./out/build/run-tests.js integration",
 		"test:instrument": "shx rm -rf out/src-orig && shx mv out/src out/src-orig && istanbul instrument --complete-copy --embed-source --output out/src out/src-orig",
 		"test:coverage": "npm run build && npm run test:instrument && node ./out/build/install-vscode.js && node ./out/build/run-tests.js unit",
 		"build": "npm run clean && npm run lint && npm run compile && npm run bundle-tools",
-		"cluster-ui-test": "extest setup-and-run out/test/ui/cluster-ui-test.js -o test/ui/settings.json -m test/ui/.mocharc.js -e ./test-resources/extensions -c max -i",
-		"public-ui-test": "extest setup-and-run out/test/ui/public-ui-test.js -o test/ui/settings.json -m test/ui/.mocharc.js -e ./test-resources/extensions -c max -i"
+		"cluster-ui-test": "extest setup-tests -e ./test-resources/extensions -c max -i && npm run test:prepare && extest run-tests out/test/ui/cluster-ui-test.js -o test/ui/settings.json -m test/ui/.mocharc.js -e ./test-resources/extensions -c max",
+		"public-ui-test": "extest setup-tests -e ./test-resources/extensions -c max -i && npm run test:prepare && extest run-tests out/test/ui/public-ui-test.js -o test/ui/settings.json -m test/ui/.mocharc.js -e ./test-resources/extensions -c max"
 	},
 	"dependencies": {
-		"@codemirror/lang-yaml": "^6.1.1",
-		"@kubernetes/client-node": "^0.22.2",
-		"@redhat-developer/vscode-redhat-telemetry": "^0.9.1",
-		"@uiw/codemirror-theme-github": "^4.23.6",
-		"@uiw/react-codemirror": "^4.23.6",
-		"clsx": "^2.1.1",
-		"codemirror": "^6.0.1",
-		"dockerode": "^4.0.2",
-		"fs-extra": "^11.2.0",
-		"git-up": "^8.0.0",
-		"got": "^11.8.6",
-		"hasha": "^5.2.2",
-		"js-yaml": "^4.1.0",
-		"json-schema": "^0.4.0",
-		"json-to-ast": "^2.1.0",
-		"lodash": "^4.17.21",
-		"mkdirp": "^3.0.1",
-		"node-yaml-parser": "^0.0.9",
-		"portfinder": "^1.0.32",
-		"rxjs": "^7.8.1",
-		"semver": "^7.6.3",
-		"shelljs": "^0.8.5",
-		"stacktrace-parser": "^0.1.10",
-		"targz": "^1.0.1",
-		"tmp": "^0.2.3",
-		"unzip-stream": "^0.3.4",
-		"validator": "^13.12.0",
-		"vscode-kubernetes-tools-api": "^1.3.0",
-		"xterm": "^5.3.0",
-		"xterm-addon-serialize": "^0.11.0",
-		"xterm-headless": "^5.3.0"
+		"shelljs": "^0.8.5"
 	},
 	"devDependencies": {
+		"@codemirror/lang-yaml": "^6.1.1",
 		"@devfile/api": "^2.2.2-1716821574",
+		"@kubernetes/client-node": "^0.22.2",
 		"@mui/icons-material": "^6.1.8",
 		"@mui/lab": "^6.0.0-beta.16",
-		"@mui/material": "^6.1.0",
+		"@mui/material": "^6.1.8",
 		"@mui/styles": "^6.1.8",
 		"@mui/x-tree-view": "^7.22.1",
+		"@redhat-developer/vscode-redhat-telemetry": "^0.9.1",
 		"@rjsf/core": "^5.22.4",
 		"@rjsf/mui": "^5.22.4",
 		"@rjsf/utils": "^5.22.4",
@@ -117,6 +93,8 @@
 		"@segment/analytics-next": "^1.76.0",
 		"@svgr/plugin-jsx": "^8.1.0",
 		"@types/chai": "^4.3.20",
+		"@typescript-eslint/eslint-plugin": "^8.15.0",
+		"@typescript-eslint/parser": "^8.15.0",
 		"@types/dockerode": "^3.3.32",
 		"@types/express": "^5.0.0",
 		"@types/fs-extra": "^11.0.4",
@@ -137,17 +115,21 @@
 		"@types/unzip-stream": "^0.3.4",
 		"@types/validator": "^13.12.2",
 		"@types/vscode": "1.82.0",
-		"@typescript-eslint/eslint-plugin": "^8.15.0",
-		"@typescript-eslint/parser": "^8.15.0",
+		"@uiw/codemirror-theme-github": "^4.23.6",
 		"@uiw/codemirror-theme-vscode": "^4.23.6",
+		"@uiw/react-codemirror": "^4.23.6",
 		"@vscode/test-electron": "^2.4.1",
 		"bootstrap": "^5.3.3",
 		"chai": "^4.5.0",
 		"chokidar": "^4.0.1",
 		"clipboardy": "^2.3.0",
+		"clsx": "^2.1.1",
 		"codecov": "^3.8.3",
+		"codemirror": "^6.0.1",
+		"dockerode": "^4.0.2",
 		"dpdm": "^3.14.0",
 		"esbuild": "^0.19.12",
+		"esbuild-node-externals": "^1.15.0",
 		"esbuild-plugin-svgr": "^2.1.0",
 		"esbuild-sass-plugin": "^2.16.1",
 		"eslint": "^8.57.1",
@@ -160,12 +142,23 @@
 		"eslint-plugin-prettier": "^5.2.1",
 		"express": "^5.0.1",
 		"file-loader": "^6.2.0",
+		"fs-extra": "^11.2.0",
+		"git-up": "^8.0.0",
 		"glob": "^11.0.0",
+		"got": "^11.8.6",
+		"hasha": "^5.2.2",
 		"istanbul": "^0.4.5",
+		"json-schema": "^0.4.0",
+		"json-to-ast": "^2.1.0",
+		"js-yaml": "^4.1.0",
 		"leasot": "^14.4.0",
+		"lodash": "^4.17.21",
+		"mkdirp": "^3.0.1",
 		"mocha": "^10.8.2",
 		"mocha-jenkins-reporter": "^0.4.7",
+		"node-yaml-parser": "^0.0.9",
 		"npm-run-all": "^4.1.5",
+		"portfinder": "^1.0.32",
 		"prettier": "^3.3.3",
 		"pretty-bytes": "^6.1.1",
 		"proxyquire": "^2.1.3",
@@ -176,23 +169,35 @@
 		"react-phone-input-2": "^2.14.0",
 		"react-scroll-to-top": "^3.0.0",
 		"remap-istanbul": "^0.13.0",
+		"rxjs": "^7.8.1",
+		"semver": "^7.6.3",
 		"showdown": "^2.1.0",
 		"shx": "^0.3.3",
 		"sinon": "^19.0.2",
 		"sinon-chai": "^3.7.0",
 		"source-map-support": "^0.5.21",
+		"stacktrace-parser": "^0.1.10",
 		"survey-core": "^1.12.11",
 		"survey-react-ui": "^1.12.11",
+		"targz": "^1.0.1",
+		"tmp": "^0.2.3",
+		"ts-node": "^10.9.2",
 		"typescript": "^5.6.3",
+		"unzip-stream": "^0.3.4",
+		"validator": "^13.12.0",
 		"vscode-extension-tester": "^8.9.0",
+		"vscode-kubernetes-tools-api": "^1.3.0",
+		"xterm": "^5.3.0",
 		"xterm-addon-fit": "^0.8.0",
+		"xterm-addon-serialize": "^0.11.0",
+		"xterm-addon-webgl": "^0.16.0",
 		"xterm-addon-web-links": "^0.9.0",
-		"xterm-addon-webgl": "^0.16.0"
+		"xterm-headless": "^5.3.0"
 	},
 	"overrides": {
-		"tough-cookie": "^5.0.0",
+		"cookie": "^1.0.1",
 		"cross-spawn": "^7.0.6",
-		"cookie": "^1.0.1"
+		"tough-cookie": "^5.0.0"
 	},
 	"activationEvents": [
 		"onView:openshiftProjectExplorer",
