--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
         ],
         "sourceMap": true,
         "rootDir": ".",
+        "esModuleInterop": true,
         /* Strict Type-Checking Option */
         "strict": false,   /* enable all strict type-checking options */
         /* Additional Checks */
