--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -48,7 +48,7 @@ jobs:
         with:
           run: npm run test:coverage --silent
 
-      - uses: engineerd/setup-kind@aa272fe2a7309878ffc2a81c56cfe3ef108ae7d0 #v0.5.0
+      - uses: engineerd/setup-kind@v0.6.2
         if: (success() || failure()) && runner.os == 'Linux'
         name: Start cluster
         with:
