--- a/package.json
+++ b/package.json
@@ -197,6 +197,11 @@
 	"overrides": {
 		"cookie": "^1.0.1",
 		"cross-spawn": "^7.0.6",
+		"glob": "^11.0.0",
+		"js-yaml": "^4.1.0",
+		"mkdirp": "^3.0.1",
+		"semver": "^7.6.3",
+		"tar-fs": "^2.1.1",
 		"tough-cookie": "^5.0.0"
 	},
 	"activationEvents": [
