--- a/package.json
+++ b/package.json
@@ -74,8 +74,7 @@
 		"public-ui-test": "extest setup-tests -e ./test-resources/extensions -c max -i && npm run test:prepare && extest run-tests out/test/ui/public-ui-test.js -o test/ui/settings.json -m test/ui/.mocharc.js -e ./test-resources/extensions -c max"
 	},
 	"dependencies": {
-		"shelljs": "^0.8.5",
-		"dompurify": "^3.2.1"
+		"shelljs": "^0.8.5"
 	},
 	"devDependencies": {
 		"@codemirror/lang-yaml": "^6.1.1",
@@ -128,6 +127,7 @@
 		"codecov": "^3.8.3",
 		"codemirror": "^6.0.1",
 		"dockerode": "^4.0.2",
+		"dompurify": "^3.2.1",
 		"dpdm": "^3.14.0",
 		"esbuild": "^0.19.12",
 		"esbuild-node-externals": "^1.15.0",
