[build] Group chai and sinon-chai dependabot updates together
Signed-off-by: Victor Rubezhny <vrubezhny@redhat.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -27,3 +27,9 @@ updates:
     uiw:
       patterns:
       - "@uiw/*"
+    sinon-chai:
+      patterns:
+        - "chai"
+        - "@types/chai"
+        - "sinon-chai"
+        - "@types/sinon-chai"
