[build] Remove outdated 'setup-xvfb' action usage when running on ubuntu
GitHub Actions (ubuntu) ships with xvfb, so the 'setup-xvfb' action is no longer needed.
See: https://github.com/actions/runner-images/blob/main/images/linux/Ubuntu2204-Readme.md

Signed-off-by: Victor Rubezhny <vrubezhny@redhat.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,9 +44,8 @@ jobs:
           npm install
           echo "EXT_VERSION=$(cat package.json | jq -r .version)" >> $GITHUB_ENV
       - name: Build And Run Unit Tests
-        uses: coactions/setup-xvfb@6b00cf1889f4e1d5a48635647013c0508128ee1a #v1.0.1
-        with:
-          run: npm run test
+        run: xvfb-run npm run test
+
       - name: Package
         run: |
           node ./out/build/update-readme.js
