[build]  Fix 'check-*' GH Actions
The PR fixes the PR creation problem in the following GH Actions:
- check-alizer
- check-crc
- check-func
- check-helm
- check-odo

This workaround helps fixing 'gh pr create' behaviour. See: https://github.com/cli/cli/issues/6485

Signed-off-by: Victor Rubezhny <vrubezhny@redhat.com>

--- a/.github/workflows/check-alizer.yml
+++ b/.github/workflows/check-alizer.yml
@@ -72,4 +72,4 @@ jobs:
           git checkout -b "bump-alizer-${{ env.LATEST_TOOL_RELEASE }}"
           git commit -am "Update Alizer CLI to ${{ env.LATEST_TOOL_RELEASE }}"
           git push origin "bump-alizer-${{ env.LATEST_TOOL_RELEASE }}"
-          gh pr create --title "Update Alizer CLI to ${{ env.LATEST_TOOL_RELEASE }}" --body "See ${{ env.LATEST_TOOL_URL }}"
+          gh pr create --head $(git branch --show-current) --title "Update Alizer CLI to ${{ env.LATEST_TOOL_RELEASE }}" --body "See ${{ env.LATEST_TOOL_URL }}"
