--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,6 +14,7 @@ updates:
     typescript-eslint:
       patterns:
       - "@typescript-eslint/*"
+      - "typescript-eslint"
     material-ui:
       patterns:
       - "@mui/*"
