--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
 		"@rjsf/utils": "^5.24.3",
 		"@rjsf/validator-ajv8": "^5.24.3",
 		"@segment/analytics-next": "^1.77.0",
+		"@svgr/core": "^8.1.0",
 		"@svgr/plugin-jsx": "^8.1.0",
 		"@types/chai": "^4.3.20",
 		"@types/dockerode": "^3.3.34",
@@ -130,7 +131,6 @@
 		"dpdm": "^3.14.0",
 		"esbuild": "^0.25.0",
 		"esbuild-node-externals": "^1.18.0",
-		"esbuild-plugin-svgr": "^3.1.0",
 		"esbuild-sass-plugin": "^3.3.1",
 		"eslint": "^9.20.1",
 		"eslint-config-prettier": "^10.0.1",
