--- a/package.json
+++ b/package.json
@@ -146,9 +146,9 @@
 		"got": "^11.8.6",
 		"hasha": "^5.2.2",
 		"istanbul": "^0.4.5",
+		"js-yaml": "^4.1.0",
 		"json-schema": "^0.4.0",
 		"json-to-ast": "^2.1.0",
-		"js-yaml": "^4.1.0",
 		"leasot": "^14.4.0",
 		"lodash": "^4.17.21",
 		"mkdirp": "^3.0.1",
@@ -188,8 +188,8 @@
 		"xterm": "^5.3.0",
 		"xterm-addon-fit": "^0.8.0",
 		"xterm-addon-serialize": "^0.11.0",
-		"xterm-addon-webgl": "^0.16.0",
 		"xterm-addon-web-links": "^0.9.0",
+		"xterm-addon-webgl": "^0.16.0",
 		"xterm-headless": "^5.3.0"
 	},
 	"overrides": {
@@ -222,6 +222,7 @@
 		"onCommand:openshift.explorer.login.clipboard",
 		"onCommand:openshift.explorer.logout",
 		"onCommand:openshift.explorer.refresh",
+		"onCommand:openshift.explorer.describe.kubeconfig",
 		"onCommand:openshift.componentTypesView.refresh",
 		"onCommand:openshift.project.create",
 		"onCommand:openshift.project.set",
@@ -281,7 +282,7 @@
 		"icons": {
 			"current-context": {
 				"description": "context",
-				"default": "selection"
+				"default": "layers-active"
 			},
 			"project-node": {
 				"description": "project node",
@@ -390,6 +391,11 @@
 					"dark": "images/title/dark/icon-issue.svg",
 					"light": "images/title/light/icon-issue.svg"
 				}
+			},
+			{
+				"command": "openshift.explorer.describe.kubeconfig",
+				"title": "Print effective Kube config",
+				"category": "OpenShift"
 			},
 			{
 				"command": "openshift.show.feedback",
