[build] Group react and react-dom dependabot updates together
Signed-off-by: Victor Rubezhny <vrubezhny@redhat.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -28,6 +28,10 @@ updates:
     uiw:
       patterns:
       - "@uiw/*"
+    react:
+      patterns:
+        - "react"
+        - "react-dom"
     sinon-chai:
       patterns:
         - "chai"
