[build] Limit @dependabot updates for @mui to v.6.x
Signed-off-by: Victor Rubezhny <vrubezhny@redhat.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,6 +10,17 @@ updates:
   schedule:
     interval: daily
   open-pull-requests-limit: 10
+  ignore:
+  - dependency-name: "mui/lab"
+    versions: [">=7.0.0"]
+  - dependency-name: "@mui/material"
+    versions: [">=7.0.0"]
+  - dependency-name: "@mui/icons-material"
+    versions: [">=7.0.0"]
+  - dependency-name: "@mui/styles"
+    versions: [">=7.0.0"]
+  - dependency-name: "@mui/lab"
+    versions: [">=7.0.0"]
   groups:
     typescript-eslint:
       patterns:
