[build] Limit @dependabot updates for @mui to v.6.x (part 3)
Signed-off-by: Victor Rubezhny <vrubezhny@redhat.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,7 +14,7 @@ updates:
   - dependency-name: "@mui/icons-material"
     versions: [">=7.0.0-0"]
   - dependency-name: "mui/lab"
-    versions: [">=7.0.0-0"]
+    versions: [">=6.999"]
   - dependency-name: "@mui/material"
     versions: [">=7.0.0-0"]
   - dependency-name: "@mui/styles"
