--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,7 +13,7 @@ updates:
   ignore:
   - dependency-name: "@mui/icons-material"
     versions: [">=7.0.0-0"]
-  - dependency-name: "mui/lab"
+  - dependency-name: "@mui/lab"
     versions: [">=6.999"]
   - dependency-name: "@mui/material"
     versions: [">=7.0.0-0"]
