[build] Limit @dependabot updates for @types/node to v.20.x
Signed-off-by: Victor Rubezhny <vrubezhny@redhat.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,10 +11,12 @@ updates:
     interval: daily
   open-pull-requests-limit: 10
   ignore:
+  - dependency-name: "@types/node"
+    versions: [">=21.0.0-0"]
   - dependency-name: "@mui/icons-material"
     versions: [">=7.0.0-0"]
   - dependency-name: "@mui/lab"
-    versions: [">=6.999"]
+    versions: [">=7.0.0-0"]
   - dependency-name: "@mui/material"
     versions: [">=7.0.0-0"]
   - dependency-name: "@mui/styles"
