--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
         "outDir": "out",
         "lib": [
             "es6",
-            "dom"
+            "dom",
+            "WebWorker"
         ],
         "typeRoots": [
             "./src/@types"
