--- a/package.json
+++ b/package.json
@@ -74,8 +74,7 @@
 		"public-ui-test": "extest setup-tests -e ./test-resources/extensions -c max -i && npm run test:prepare && extest run-tests out/test/ui/public-ui-test.js -o test/ui/settings.json -m test/ui/.mocharc.js -e ./test-resources/extensions -c max"
 	},
 	"dependencies": {
-		"jsonc-parser": "^3.3.1",
-		"shelljs": "^0.10.0"
+		"jsonc-parser": "^3.3.1"
 	},
 	"devDependencies": {
 		"@apidevtools/json-schema-ref-parser": "^14.1.0",
@@ -107,7 +106,6 @@
 		"@types/react-copy-to-clipboard": "^5.0.7",
 		"@types/react-dom": "^18.3.7",
 		"@types/semver": "^7.7.0",
-		"@types/shelljs": "^0.8.17",
 		"@types/sinon": "^17.0.4",
 		"@types/sinon-chai": "^4.0.0",
 		"@types/targz": "^1.0.5",
@@ -184,6 +182,7 @@
 		"validator": "^13.15.15",
 		"vscode-extension-tester": "^8.11.0",
 		"vscode-kubernetes-tools-api": "^1.3.0",
+		"which": "^5.0.0",
 		"xterm": "^5.3.0",
 		"xterm-addon-fit": "^0.8.0",
 		"xterm-addon-serialize": "^0.11.0",
