--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
 	"scripts": {
 		"compile": "npm run prebuild-esm && node ./build/esbuild.build.cjs",
 		"build": "npm run prebuild-esm && node ./build/esbuild.build.cjs && npm run bundle-tools",
-		"vscode:prepublish": "npm run prebuild-esm && node ./build/esbuild.build.cjs --production && npm run bundle-tools && npm prune --omit=dev",
+		"vscode:prepublish": "npm install && npm run clean && npm run lint && npm run prebuild-esm && node ./build/esbuild.build.cjs --production && npm run bundle-tools && npm prune --omit=dev",
 		"prebuild-esm": "node ./build/esbuild.transform-esm.cjs",
 		"watch:extension": "tsc -p tsconfig.json --watch",
 		"watch:webviews": "node ./build/esbuild.webviews.cjs --watch",
