[deps] Prevent DB from updating `*react*` to v.19.x

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -23,6 +23,8 @@ updates:
     versions: [">=7.0.0-0"]
   - dependency-name: "@mui/x-tree-view"
     versions: [">=8.0.0-0"]
+  - dependency-name: "*react*"
+    versions: [">=19.0.0-0"]
   groups:
     typescript-eslint:
       patterns:
