--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,9 @@ updates:
   directory: "/"
   schedule:
     interval: daily
+  allow:
+    - dependency-type: "all"
+  versioning-strategy: increase
   open-pull-requests-limit: 10
   ignore:
   - dependency-name: "@types/node"
