--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -45,6 +45,15 @@
             },
         },
         {
+            "label": "setup-tests",
+            "type": "shell",
+            "command": "${workspaceFolder}/node_modules/.bin/extest setup-tests -e ${workspaceFolder}/test-resources/extensions -c max -i && npm run test:prepare",
+            "problemMatcher": "$tsc",
+            "presentation": {
+                "reveal": "silent",
+            },
+        },
+        {
             "label": "instrument",
             "type": "shell",
             "command": ["${workspaceFolder}/node_modules/.bin/shx rm -rf ${workspaceFolder}/out/src-orig && ${workspaceFolder}/node_modules/.bin/shx mv ${workspaceFolder}/out/src ${workspaceFolder}/out/src-orig && ${workspaceFolder}/node_modules/.bin/istanbul instrument --complete-copy --embed-source --output out/src out/src-orig"],
